fix: timezone issue + some other test cases. Total test 94.49%